# tmaze-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tmaze_pipeline/: __init__.py  cli.py  config.py
src/tmaze_pipeline/stages/: __init__.py  decision_analysis.py  distortion_check.py  gait_analysis.py  pose_inference.py  roi_inference.py  slp_to_yaml.py
src/tmaze_pipeline/utils/: __init__.py  checkpoint.py  parallel.py  video.py
